2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Anonymous.h, Atlas/Objects/Dispatcher.cpp,
	  Atlas/Objects/Dispatcher.h, Atlas/Objects/ObjectsFwd.h,
	  Atlas/Objects/Operation.h, Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,
	  Atlas/Objects/RootOperationChildren4.cpp,
	  Atlas/Objects/RootOperationChildren5.cpp,
	  Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate objects included new Wield and Touch ops from
	  the updated spec.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Makefile.am: Move objectFactory.cpp into the generated
	  sources section as it should be.

	* Atlas/Objects/SmartPtr.h: Remove the factory() method as it clutters
	  the API, and causes a problem with gcc 4.

	* Atlas/Objects/objectFactory.cpp, Atlas/Objects/objectFactory.h,
	  Atlas/Objects/GenerateObjectFactory.py: Use an inlined template
	  factory function rather than the one removed from SmartPtr.

	* tests/Objects/custom_ops.cpp: Update the code demonstrating how
	  to create and install custom op types.

	* tests/Objects/objects2.cpp: Modify code that tested using factory
	  method to create instances.

2005-05-07  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.95, Interface version 0.

2005-05-07  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update for upcoming release.

	* atlas-cpp.spec.in: Tweak BuildRoot to match fedora guidelines.

2005-05-03  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h, Atlas/Objects/BaseObject.cpp:
	  Provide hasAttrFlag() method to check whether a known
	  hard coded attribute has been set.

2005-05-03  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/objectFactory.cpp: When creating a new object,
	  initialise the SmartPtr to 0 to start with, for efficiency
	  and to be sure we really have got a new object.

	* Atlas/Objects/GenerateDecoder.py, Atlas/Objects/Decoder.h,