@@ -1,5 +1,5 @@
-Makefile
-Makefile.in
 .deps
 .libs
+Makefile
+Makefile.in
 atlas_convert
